--- a/Makefile.in
+++ b/Makefile.in
@@ -1389,12 +1389,12 @@ am__magick_libMagickCore_@MAGICK_ABI_SUFFIX@_la_SOURCES_DIST =  \
 	magick/image-view.h magick/layer.c magick/layer.h \
 	magick/list.c magick/list.h magick/locale.c magick/locale_.h \
 	magick/log.c magick/log.h magick/mac.h magick/magic.c \
-	magick/magic.h magick/magick.c magick/magick-config.h \
-	magick/magick-baseconfig.h magick/magick-type.h \
-	magick/magick.h magick/matrix.c magick/matrix.h \
-	magick/memory.c magick/memory_.h magick/memory-private.h \
-	magick/methods.h magick/method-attribute.h magick/mime.c \
-	magick/mime.h magick/module.c magick/module.h magick/monitor.c \
+	magick/magic.h magick/magick.c magick/magick-baseconfig.h \
+	magick/magick-config.h magick/magick-type.h magick/magick.h \
+	magick/matrix.c magick/matrix.h magick/memory.c \
+	magick/memory_.h magick/memory-private.h magick/methods.h \
+	magick/method-attribute.h magick/mime.c magick/mime.h \
+	magick/module.c magick/module.h magick/monitor.c \
 	magick/monitor.h magick/monitor-private.h magick/montage.c \
 	magick/montage.h magick/morphology.c magick/morphology.h \
 	magick/morphology-private.h magick/nt-base.h \
@@ -3984,8 +3984,7 @@ magick_libMagickCore_@MAGICK_ABI_SUFFIX@_la_CPPFLAGS = -I$(top_builddir)/ltdl -I
 @HAVE_LD_VERSION_SCRIPT_TRUE@magick_libMagickCore_@MAGICK_ABI_SUFFIX@_la_LDFLAGS_VERSION = -Wl,--version-script=$(top_srcdir)/magick/libMagickCore.map
 magick_libMagickCore_@MAGICK_ABI_SUFFIX@_la_LDFLAGS = -no-undefined \
   $(magick_libMagickCore_la_LDFLAGS_VERSION) \
-  $(OSX_GCOV_LDFLAG) $(MAGICK_LT_RELEASE_OPTS) \
-  -version-info \
+  $(OSX_GCOV_LDFLAG) $(MAGICK_LT_RELEASE_OPTS) -version-info \
   $(MAGICK_LIBRARY_CURRENT):$(MAGICK_LIBRARY_REVISION):$(MAGICK_LIBRARY_AGE)
 
 magick_libMagickCore_@MAGICK_ABI_SUFFIX@_la_DEPENDENCIES = 
@@ -4098,8 +4097,8 @@ MAGICK_BASE_SRCS = \
 	magick/magic.c \
 	magick/magic.h \
 	magick/magick.c \
-	magick/magick-config.h \
 	magick/magick-baseconfig.h \
+	magick/magick-config.h \
 	magick/magick-type.h \
 	magick/magick.h \
 	magick/matrix.c \
