--- a/config/config.h.in
+++ b/config/config.h.in
@@ -697,7 +697,7 @@
 /* define if your compiler has __attribute__ */
 #undef HAVE___ATTRIBUTE__
 
-/* Whether hdri is enable or not */
+/* Whether hdri is enabled or not */
 #undef HDRI_ENABLE_OBSOLETE_IN_H
 
 /* Define if you have umem memory allocation library */
