--- a/config/config.h.in
+++ b/config/config.h.in
@@ -73,6 +73,9 @@
 /* Define to 1 if you have the <arm/limits.h> header file. */
 #undef HAVE_ARM_LIMITS_H
 
+/* Define to 1 if you have the <arpa/inet.h> header file. */
+#undef HAVE_ARPA_INET_H
+
 /* Define to 1 if you have the `asinh' function. */
 #undef HAVE_ASINH
 
