--- a/config/config.h.in
+++ b/config/config.h.in
@@ -58,7 +58,7 @@
 /* Define if you have FlashPIX library */
 #undef FPX_DELEGATE
 
-/* Define if you have FreeType (TrueType font) library */
+/* Define if you have FREETYPE library */
 #undef FREETYPE_DELEGATE
 
 /* Define if you have Ghostscript library or framework */
@@ -184,9 +184,6 @@
 
 /* Define to 1 if fseeko (and presumably ftello) exists and is declared. */
 #undef HAVE_FSEEKO
-
-/* Define to 1 if you have the <ft2build.h> header file. */
-#undef HAVE_FT2BUILD_H
 
 /* Define to 1 if you have the `ftime' function. */
 #undef HAVE_FTIME
