--- a/Magick++/lib/ImageMagick++.pc.in
+++ b/Magick++/lib/ImageMagick++.pc.in
@@ -8,5 +8,5 @@ Name: ImageMagick++
 Version: @PACKAGE_VERSION@
 Description: Magick++ - C++ API for ImageMagick (ABI @MAGICK_ABISUFFIX@)
 Requires: ImageMagick
-Libs: -L${libdir} -lMagick++-@MAGICK_ABI_SUFFIX@
+Libs: -L${libdir} -lMagick++@MAGICK_MAJOR_VERSION@-@MAGICK_ABI_SUFFIX@
 Cflags: -I${includedir}
